--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,6 @@
   }
 
   .admin-button {
-    @apply bg-[#092824] py-4 flex-1 rounded-md border-[#01483b] border-2 hover:bg-emerald-500/50
+    @apply bg-[#092824] py-4 px-5 flex justify-center gap-4 rounded-md border-[#01483b] border-2 hover:bg-emerald-500/50
   }
 }
